@@ -54,6 +54,35 @@ under the License.
     </section>
 
     <section name="Current Releases">
+      <subsection name="1.0.3-incubating Espressivo">
+        <p>Release date: Oct 30th, 2012</p>
+        <p>
+          <a href="https://cwiki.apache.org/confluence/display/SYNCOPE/Espressivo">Release notes</a>
+        </p>
+        <table>
+          <thead>
+            <tr>
+              <th>Artifact</th>
+              <th>Signatures</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <a href="http://www.apache.org/dyn/closer.cgi/incubator/syncope/1.0.3-incubating/syncope-root-1.0.3-incubating-source-release.zip">syncope-root-1.0.3-incubating-source-release.zip</a>
+              </td>
+              <td>
+                <a href="http://www.apache.org/dist/incubator/syncope/1.0.3-incubating/syncope-root-1.0.3-incubating-source-release.zip.asc">asc</a> 
+                <a href="http://www.apache.org/dist/incubator/syncope/1.0.3-incubating/syncope-root-1.0.3-incubating-source-release.zip.md5">md5</a> 
+                <a href="http://www.apache.org/dist/incubator/syncope/1.0.3-incubating/syncope-root-1.0.3-incubating-source-release.zip.sha1">sha1</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </subsection>
+    </section>
+
+    <section name="Older Releases">
       <subsection name="1.0.2-incubating Espressivo">
         <p>Release date: Oct 2nd, 2012</p>
         <p>
@@ -69,20 +98,18 @@ under the License.
           <tbody>
             <tr>
               <td>
-                <a href="http://www.apache.org/dyn/closer.cgi/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip">syncope-root-1.0.2-incubating-source-release.zip</a>
+                <a href="http://archive.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip">syncope-root-1.0.2-incubating-source-release.zip</a>
               </td>
               <td>
-                <a href="http://www.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip.asc">asc</a> 
-                <a href="http://www.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip.md5">md5</a> 
-                <a href="http://www.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip.sha1">sha1</a>
+                <a href="http://archive.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip.asc">asc</a>
+                <a href="http://archive.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip.md5">md5</a>
+                <a href="http://archive.apache.org/dist/incubator/syncope/1.0.2-incubating/syncope-root-1.0.2-incubating-source-release.zip.sha1">sha1</a>
               </td>
             </tr>
           </tbody>
         </table>
       </subsection>
-    </section>
 
-    <section name="Older Releases">
       <subsection name="1.0.1-incubating Espressivo">
         <p>Release date: Aug 30th, 2012</p>
         <p>
